--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,16 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Ludovic - Program and Thinks !
+email: noemail
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Yet again a blog about technologies... Hum, or exactly what I see in them,
+  experimentations, love/hate and so one, with a LoL spirit of course.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://10.0.0.10/" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: ludovic_deluna
+github_username:  ludovicdeluna
+version: "1.0"
+github:
+  repo : "https://github.com/ludovicdeluna/myblog"
 
 # Server setting
 port: 3000
